<resources>
    <string name="app_name">Track Mca(2nd)</string>
    <string name="addbutton">addButton</string>

    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="scrollview1">scrollView</string>
    <string name="drop">Drop</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="textview4">TextView</string>
    <string name="textview5">TextView</string>
    <string name="textview6">TextView</string>
    <string name="drop2">drop2</string>
    <string name="drop3">drop3</string>
    <string name="drop4">drop4</string>
    <string name="drop5">drop5</string>
    <string name="drop6">drop6</string>
    <string name="check_attendance">Check Attendance</string>
    <string name="check_status">Check Status</string>
    <string name="toc">TOC</string>
    <string name="ads">ADS</string>
    <string name="cn">CN</string>
    <string name="se">SE</string>
    <string name="lab">LAB</string>
    <string name="submit">SUBMIT</string>
    <string name="ds">DS</string>
    <string name="ds2">DS</string>
    <string name="perc">%</string>
    <string name="perc2">%</string>
    <string name="perc3">%</string>
    <string name="perc4">%</string>
    <string name="perc5">%</string>
    <string name="perc6">%</string>
    <string name="lab2">LAB</string>
    <string name="se2">SE</string>
    <string name="cn2">CN</string>
    <string name="ads2">ADS</string>
    <string name="toc2">TOC</string>
    <string name="average">Average</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="jan_01_2020">JAN 01 2020</string>
    <string name="subspinner">subSpinner</string>
    <string name="search_status">Search Status</string>
    <string name="enter_date">Enter Date</string>
    <string name="status">Status</string>
    <string name="presence">Presence</string>
    <string-array name="attendance">
        <item>No Class</item>
        <item>Present</item>
        <item>Absent</item>
        <item>Class Cancelled</item>
        <item>Other</item>
    </string-array>
    <string-array name="subjects">
        <item>TOC</item>
        <item>ADS</item>
        <item>CN</item>
        <item>SE</item>
        <item>DS</item>
        <item>LAB</item>
    </string-array>
    <string name="title_activity_main5">MainActivity5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_subjects">Add Subjects</string>
    <string name="dateselection">dateSelection</string>
    <string name="daystatus">dayStatus</string>
    <string name="select_date">Select Date</string>
    <string name="your_record">Your Record</string>
</resources>