<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/scrollview1"
    android:textAlignment="center"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="123dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:hint="@string/day"
        android:textColor="@color/textColor"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="182dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:hint="@string/date"
        android:paddingStart="20dp"
        android:textColor="@color/textColor"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_attendance"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="12dp"

        android:contentDescription="@string/drop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spinner_attendance2"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"

        android:contentDescription="@string/drop6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_attendance3" />

    <Spinner
        android:id="@+id/spinner_attendance3"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"

        android:contentDescription="@string/drop5"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_attendance4" />

    <Spinner
        android:id="@+id/spinner_attendance4"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"

        android:contentDescription="@string/drop4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_attendance5" />

    <Spinner
        android:id="@+id/spinner_attendance5"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"

        android:contentDescription="@string/drop3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_attendance6" />

    <Spinner
        android:id="@+id/spinner_attendance6"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"

        android:contentDescription="@string/drop2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_attendance" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="124dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/andika_new_basic"
        android:paddingLeft="20sp"
        android:paddingTop="12sp"
        android:text="@string/toc"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/spinner_attendance"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:paddingLeft="20sp"
        android:paddingTop="12sp"
        android:text="@string/ads"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:paddingLeft="20sp"
        android:paddingTop="12sp"
        android:text="@string/cn"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:paddingLeft="20sp"
        android:paddingTop="12sp"
        android:text="@string/se"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"

        android:paddingLeft="20sp"
        android:paddingTop="12sp"
        android:text="@string/ds"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:paddingLeft="20sp"
        android:paddingTop="12sp"
        android:text="@string/lab"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/button3"
        android:layout_width="182dp"
        android:layout_height="63dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/submit"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

</androidx.constraintlayout.widget.ConstraintLayout>