<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/addbutton"
        android:focusable="true"
        android:onClick="ad"
        android:tooltipText="Add Attendance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/plus"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="338dp"
        android:layout_height="79dp"
        android:layout_marginTop="260dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/check_attendance"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="500dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="338dp"
        android:layout_height="79dp"
        android:layout_marginBottom="276dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/check_status"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="53dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="76dp"
        android:layout_height="82dp"
        android:layout_marginTop="4dp"
        android:contentDescription="nightday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nightday" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/andika_new_basic"
        android:shadowColor="#000000"
        android:text="Track MCA"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>